<resources>
    <string name="app_name">Shoe Store</string>
    <!--Login fragment-->
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="login">Login</string>
    <string name="login_message">Login to your account</string>
    <string name="register">Create account</string>
    <string name="register_message">Create your account</string>
    <string name="password_condition">Use 8 or more characters with a mix of letters, numbers and symbols.</string>
    <!--Welcome fragment-->
    <string name="welcome_title">Welcome to Shoe Store!</string>
    <string name="logged_email_format">Logged in as %s</string>
    <string name="instructions">Instructions</string>
    <!--Instructions fragment-->
    <string name="shoe_icon_description">White shoe</string>
    <string name="shoe_list">Shoe list</string>
    <!--Shoe list fragment-->
    <string name="logout">Logout</string>
    <string name="plus_icon_description">"Plus icon"</string>
    <string name="shoe_list_instructions">Click the Shoe List button to navigate to the shoe list screen. There, you will find a plus button to add a new shoe, and a logout button to return to the login screen.</string>
    <string name="shoe_details_format">Company: %s\nSize: %s\nDescription: %s</string>
    <string name="add_shoes">It\'s quite empty here. Add some shoes.</string>
    <!--Shoe detail fragment-->
    <string name="add_new_shoe">Add a new shoe.</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>