<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shoe"
            type="com.example.shoestore.shoe.Shoe" />
    </data>

    <!-- Similar to the login screen, the shoe detail fragment only needs some edit text views
     stacked vertically, so a LinearLayout is the simplest solution here. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/regular_spacing"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_add_new_shoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_spacing"
            android:text="@string/add_new_shoe"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <EditText
            android:id="@+id/edit_text_shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:text="@={shoe.name}" />

        <EditText
            android:id="@+id/edit_text_shoe_company"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/company"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:text="@={shoe.company}"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_text_shoe_size"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="5"
            android:hint="@string/size"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="@={shoe.size}"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_text_shoe_description"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="20"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={shoe.description}" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/large_spacing"
            android:text="@string/save" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="96dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/small_spacing"
            android:text="@string/cancel"
            android:textColor="?colorError"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</layout>