<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- An instruction screen needs no more than some text and a button to navigate, so
    a vertical linear layout works best here. It's simple to implement and looks great. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_shoe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shoe_icon_description"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/text_shoe_list_button_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/regular_spacing"
            android:text="@string/instructions"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/text_shoe_list_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_spacing"
            android:text="@string/shoe_list_instructions"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:lineSpacingMultiplier="1.2"/>

        <Button
            android:id="@+id/button_show_shoe_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/regular_spacing"
            android:text="@string/shoe_list" />
    </LinearLayout>
</layout>